--- a/DeepLearningStudy/ex_lab-09-2-xor-nn.ipynb
+++ b/DeepLearningStudy/ex_lab-09-2-xor-nn.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ Lab 9-2 : XOR_NN ]\n"
+    "# [ Lab 9-2 : XOR_NN ]\n",
+    "\n",
+    "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
   },
   {
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,199 +275,8 @@
       "       [-6.78209782]], dtype=float32)]\n",
       "4500 0.0575586 [array([[ 5.46813297,  4.93456268],\n",
       "       [-5.54989767, -4.59139204]], dtype=float32), array([[ 7.56219196],\n",
-      "       [-6.88773823]], dtype=float32)]\n",
-      "4600 0.0546559 [array([[ 5.49941397,  4.98453045],\n",
-      "       [-5.58177042, -4.64352131]], dtype=float32), array([[ 7.65054607],\n",
-      "       [-6.98839092]], dtype=float32)]\n",
-      "4700 0.0520148 [array([[ 5.52914858,  5.03177643],\n",
-      "       [-5.61218834, -4.69274044]], dtype=float32), array([[ 7.7354579 ],\n",
-      "       [-7.08447886]], dtype=float32)]\n",
-      "4800 0.0496029 [array([[ 5.55746937,  5.0765481 ],\n",
-      "       [-5.64126539, -4.73932219]], dtype=float32), array([[ 7.81716633],\n",
-      "       [-7.17637253]], dtype=float32)]\n",
-      "4900 0.0473927 [array([[ 5.58449173,  5.11906242],\n",
-      "       [-5.66910315, -4.78350449]], dtype=float32), array([[ 7.89588737],\n",
-      "       [-7.26440191]], dtype=float32)]\n",
-      "5000 0.0453608 [array([[ 5.61032057,  5.15951204],\n",
-      "       [-5.69579315, -4.82549763]], dtype=float32), array([[ 7.97181845],\n",
-      "       [-7.34886312]], dtype=float32)]\n"
+      "       [-6.88773823]], dtype=float32)]\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5100 0.0434872 [array([[ 5.63504934,  5.19806671],\n",
-      "       [-5.72141838, -4.86548567]], dtype=float32), array([[ 8.04513645],\n",
-      "       [-7.43001986]], dtype=float32)]\n",
-      "5200 0.0417547 [array([[ 5.65876007,  5.23487711],\n",
-      "       [-5.74605036, -4.90363264]], dtype=float32), array([[ 8.11600304],\n",
-      "       [-7.508111  ]], dtype=float32)]\n",
-      "5300 0.0401484 [array([[ 5.68152761,  5.27007627],\n",
-      "       [-5.76975775, -4.94008255]], dtype=float32), array([[ 8.18457127],\n",
-      "       [-7.58334732]], dtype=float32)]\n",
-      "5400 0.0386555 [array([[ 5.70341921,  5.30378771],\n",
-      "       [-5.79260159, -4.97496653]], dtype=float32), array([[ 8.25097561],\n",
-      "       [-7.65592241]], dtype=float32)]\n",
-      "5500 0.0372648 [array([[ 5.72449398,  5.3361187 ],\n",
-      "       [-5.81463623, -5.00840187]], dtype=float32), array([[ 8.31534195],\n",
-      "       [-7.7260108 ]], dtype=float32)]\n",
-      "5600 0.0359662 [array([[ 5.74480581,  5.367167  ],\n",
-      "       [-5.83591318, -5.04049015]], dtype=float32), array([[ 8.37778664],\n",
-      "       [-7.79377174]], dtype=float32)]\n",
-      "5700 0.0347513 [array([[ 5.7644043 ,  5.39702034],\n",
-      "       [-5.85647774, -5.07132721]], dtype=float32), array([[ 8.43841457],\n",
-      "       [-7.85934877]], dtype=float32)]\n",
-      "5800 0.0336124 [array([[ 5.78333616,  5.42575979],\n",
-      "       [-5.87637377, -5.10099792]], dtype=float32), array([[ 8.49732208],\n",
-      "       [-7.9228735 ]], dtype=float32)]\n",
-      "5900 0.0325428 [array([[ 5.80164146,  5.45345688],\n",
-      "       [-5.89563751, -5.12957859]], dtype=float32), array([[ 8.55460644],\n",
-      "       [-7.98446751]], dtype=float32)]\n",
-      "6000 0.0315366 [array([[ 5.8193574 ,  5.48017693],\n",
-      "       [-5.91430616, -5.15713882]], dtype=float32), array([[ 8.61034107],\n",
-      "       [-8.04424   ]], dtype=float32)]\n",
-      "6100 0.0305882 [array([[ 5.83651733,  5.50598145],\n",
-      "       [-5.93241215, -5.18374348]], dtype=float32), array([[ 8.66460991],\n",
-      "       [-8.10229015]], dtype=float32)]\n",
-      "6200 0.0296932 [array([[ 5.85315323,  5.5309248 ],\n",
-      "       [-5.94998598, -5.20945072]], dtype=float32), array([[ 8.71748352],\n",
-      "       [-8.15871716]], dtype=float32)]\n",
-      "6300 0.0288471 [array([[ 5.86929512,  5.55505562],\n",
-      "       [-5.96705532, -5.23431349]], dtype=float32), array([[ 8.76903152],\n",
-      "       [-8.21360111]], dtype=float32)]\n",
-      "6400 0.0280462 [array([[ 5.8849678 ,  5.57842445],\n",
-      "       [-5.98364687, -5.25838089]], dtype=float32), array([[ 8.81931496],\n",
-      "       [-8.26702309]], dtype=float32)]\n",
-      "6500 0.0272869 [array([[ 5.90019846,  5.60107088],\n",
-      "       [-5.99978304, -5.2816968 ]], dtype=float32), array([[ 8.86839581],\n",
-      "       [-8.31906128]], dtype=float32)]\n",
-      "6600 0.0265663 [array([[ 5.91500902,  5.62303495],\n",
-      "       [-6.01548719, -5.30430365]], dtype=float32), array([[ 8.9163208 ],\n",
-      "       [-8.36977959]], dtype=float32)]\n",
-      "6700 0.0258815 [array([[ 5.92941952,  5.64435482],\n",
-      "       [-6.03078127, -5.32623959]], dtype=float32), array([[ 8.96314621],\n",
-      "       [-8.41924191]], dtype=float32)]\n",
-      "6800 0.02523 [array([[ 5.94345188,  5.66506147],\n",
-      "       [-6.04568386, -5.3475399 ]], dtype=float32), array([[ 9.00891876],\n",
-      "       [-8.46750832]], dtype=float32)]\n",
-      "6900 0.0246094 [array([[ 5.9571209 ,  5.68518782],\n",
-      "       [-6.0602107 , -5.36823654]], dtype=float32), array([[ 9.05368328],\n",
-      "       [-8.51463509]], dtype=float32)]\n",
-      "7000 0.0240175 [array([[ 5.97044611,  5.70476294],\n",
-      "       [-6.07438278, -5.38836098]], dtype=float32), array([[ 9.09748268],\n",
-      "       [-8.56067181]], dtype=float32)]\n",
-      "7100 0.0234526 [array([[ 5.98344374,  5.7238121 ],\n",
-      "       [-6.08821344, -5.40794039]], dtype=float32), array([[ 9.14035606],\n",
-      "       [-8.60566902]], dtype=float32)]\n",
-      "7200 0.0229129 [array([[ 5.99612665,  5.74236107],\n",
-      "       [-6.10171843, -5.42700243]], dtype=float32), array([[ 9.18234062],\n",
-      "       [-8.64966774]], dtype=float32)]\n",
-      "7300 0.0223966 [array([[ 6.00851107,  5.76043415],\n",
-      "       [-6.11491203, -5.44557095]], dtype=float32), array([[ 9.22347069],\n",
-      "       [-8.69271469]], dtype=float32)]\n",
-      "7400 0.0219025 [array([[ 6.02060747,  5.77805233],\n",
-      "       [-6.12780571, -5.46366739]], dtype=float32), array([[ 9.2637825 ],\n",
-      "       [-8.73484612]], dtype=float32)]\n",
-      "7500 0.021429 [array([[ 6.03243065,  5.79523611],\n",
-      "       [-6.14041281, -5.48131466]], dtype=float32), array([[ 9.30330181],\n",
-      "       [-8.77610207]], dtype=float32)]\n",
-      "7600 0.020975 [array([[ 6.04399061,  5.81200552],\n",
-      "       [-6.15274429, -5.49853182]], dtype=float32), array([[ 9.3420639 ],\n",
-      "       [-8.81651688]], dtype=float32)]\n",
-      "7700 0.0205392 [array([[ 6.05529928,  5.82837772],\n",
-      "       [-6.16481304, -5.51533794]], dtype=float32), array([[ 9.38009262],\n",
-      "       [-8.85612106]], dtype=float32)]\n",
-      "7800 0.0201208 [array([[ 6.06636429,  5.84437037],\n",
-      "       [-6.17662716, -5.53175163]], dtype=float32), array([[ 9.41741753],\n",
-      "       [-8.89494801]], dtype=float32)]\n",
-      "7900 0.0197185 [array([[ 6.07719612,  5.85999775],\n",
-      "       [-6.18819761, -5.5477891 ]], dtype=float32), array([[ 9.45406151],\n",
-      "       [-8.93302822]], dtype=float32)]\n",
-      "8000 0.0193315 [array([[ 6.08780622,  5.87527704],\n",
-      "       [-6.19953299, -5.56346416]], dtype=float32), array([[ 9.49004841],\n",
-      "       [-8.97038651]], dtype=float32)]\n",
-      "8100 0.0189591 [array([[ 6.0982008 ,  5.89022017],\n",
-      "       [-6.21064234, -5.57879353]], dtype=float32), array([[ 9.52540302],\n",
-      "       [-9.00705242]], dtype=float32)]\n",
-      "8200 0.0186004 [array([[ 6.10838938,  5.90484238],\n",
-      "       [-6.22153378, -5.59378958]], dtype=float32), array([[ 9.56014156],\n",
-      "       [-9.04304886]], dtype=float32)]\n",
-      "8300 0.0182546 [array([[ 6.11837769,  5.91915417],\n",
-      "       [-6.2322154 , -5.60846663]], dtype=float32), array([[ 9.59428978],\n",
-      "       [-9.07840252]], dtype=float32)]\n",
-      "8400 0.0179211 [array([[ 6.12817383,  5.93316841],\n",
-      "       [-6.24269438, -5.62283468]], dtype=float32), array([[ 9.6278677 ],\n",
-      "       [-9.11312866]], dtype=float32)]\n",
-      "8500 0.0175993 [array([[ 6.137784  ,  5.94689655],\n",
-      "       [-6.25297785, -5.63690758]], dtype=float32), array([[ 9.66089153],\n",
-      "       [-9.14725494]], dtype=float32)]\n",
-      "8600 0.0172885 [array([[ 6.14721537,  5.96034861],\n",
-      "       [-6.26307201, -5.6506958 ]], dtype=float32), array([[ 9.69337463],\n",
-      "       [-9.18080044]], dtype=float32)]\n",
-      "8700 0.0169882 [array([[ 6.15647602,  5.97353411],\n",
-      "       [-6.27298355, -5.66421032]], dtype=float32), array([[ 9.7253437 ],\n",
-      "       [-9.21378231]], dtype=float32)]\n",
-      "8800 0.016698 [array([[ 6.1655674 ,  5.98646402],\n",
-      "       [-6.28271961, -5.67745876]], dtype=float32), array([[ 9.75680542],\n",
-      "       [-9.24622154]], dtype=float32)]\n",
-      "8900 0.0164173 [array([[ 6.17449951,  5.99914646],\n",
-      "       [-6.29228354, -5.69045258]], dtype=float32), array([[ 9.78778076],\n",
-      "       [-9.27813339]], dtype=float32)]\n",
-      "9000 0.0161456 [array([[ 6.18327618,  6.01159048],\n",
-      "       [-6.30168438, -5.70320034]], dtype=float32), array([[ 9.81828213],\n",
-      "       [-9.30953789]], dtype=float32)]\n",
-      "9100 0.0158825 [array([[ 6.19190073,  6.02380228],\n",
-      "       [-6.3109231 , -5.71571016]], dtype=float32), array([[ 9.84832191],\n",
-      "       [-9.34044552]], dtype=float32)]\n",
-      "9200 0.0156277 [array([[ 6.20037985,  6.03579283],\n",
-      "       [-6.3200078 , -5.72799063]], dtype=float32), array([[ 9.87791538],\n",
-      "       [-9.37087345]], dtype=float32)]\n",
-      "9300 0.0153807 [array([[ 6.2087183 ,  6.04756784],\n",
-      "       [-6.32894278, -5.74004936]], dtype=float32), array([[ 9.90707874],\n",
-      "       [-9.40083599]], dtype=float32)]\n",
-      "9400 0.0151413 [array([[ 6.21691942,  6.05913448],\n",
-      "       [-6.33773184, -5.75189161]], dtype=float32), array([[ 9.93581772],\n",
-      "       [-9.43034935]], dtype=float32)]\n",
-      "9500 0.014909 [array([[ 6.22498655,  6.07049847],\n",
-      "       [-6.34637976, -5.76352644]], dtype=float32), array([[ 9.96414757],\n",
-      "       [-9.45942593]], dtype=float32)]\n",
-      "9600 0.0146836 [array([[ 6.23292637,  6.08166742],\n",
-      "       [-6.35489035, -5.77496099]], dtype=float32), array([[ 9.99207973],\n",
-      "       [-9.48807526]], dtype=float32)]\n",
-      "9700 0.0144647 [array([[ 6.24074221,  6.09264851],\n",
-      "       [-6.36326933, -5.78620005]], dtype=float32), array([[ 10.01962471],\n",
-      "       [ -9.51631165]], dtype=float32)]\n",
-      "9800 0.0142521 [array([[ 6.24843359,  6.10344648],\n",
-      "       [-6.37151814, -5.79724979]], dtype=float32), array([[ 10.04679298],\n",
-      "       [ -9.54414845]], dtype=float32)]\n",
-      "9900 0.0140456 [array([[ 6.25601006,  6.11406422],\n",
-      "       [-6.3796401 , -5.80811644]], dtype=float32), array([[ 10.07359505],\n",
-      "       [ -9.57159519]], dtype=float32)]\n",
-      "10000 0.0138448 [array([[ 6.26347065,  6.12451124],\n",
-      "       [-6.38764334, -5.81880665]], dtype=float32), array([[ 10.10004139],\n",
-      "       [ -9.59866238]], dtype=float32)]\n",
-      "\n",
-      "Hypothesis:  [[ 0.01338216]\n",
-      " [ 0.98166394]\n",
-      " [ 0.98809403]\n",
-      " [ 0.01135799]] \n",
-      "Correct:  [[ 0.]\n",
-      " [ 1.]\n",
-      " [ 1.]\n",
-      " [ 0.]] \n",
-      "Accuracy:  1.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nHypothesis:  [[ 0.01338218]\\n [ 0.98166394]\\n [ 0.98809403]\\n [ 0.01135799]]\\nCorrect:  [[ 0.]\\n [ 1.]\\n [ 1.]\\n [ 0.]]\\nAccuracy:  1.0\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
