--- a/DeepLearningStudy/ex_lab-09-4-xor_tensorboard.ipynb
+++ b/DeepLearningStudy/ex_lab-09-4-xor_tensorboard.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ Lab 9-4 : XOR_TensorBoard ]\n"
+    "# [ Lab 9-4 : XOR_TensorBoard ]\n",
+    "\n",
+    "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -337,229 +339,8 @@
       "       [ 13.14496136]], dtype=float32)]\n",
       "3700 0.00172173 [array([[ 7.42757082, -8.01878643],\n",
       "       [-7.88703346,  8.34003353]], dtype=float32), array([[ 13.65778446],\n",
-      "       [ 13.26856995]], dtype=float32)]\n",
-      "3800 0.00161514 [array([[ 7.46371126, -8.05583858],\n",
-      "       [-7.92306852,  8.37655926]], dtype=float32), array([[ 13.77882862],\n",
-      "       [ 13.39059925]], dtype=float32)]\n",
-      "3900 0.00151637 [array([[ 7.49910593, -8.09212112],\n",
-      "       [-7.95836401,  8.41233444]], dtype=float32), array([[ 13.89842224],\n",
-      "       [ 13.51115799]], dtype=float32)]\n",
-      "4000 0.00142472 [array([[ 7.53379822, -8.12767982],\n",
-      "       [-7.99296522,  8.44739819]], dtype=float32), array([[ 14.01666355],\n",
-      "       [ 13.63034058]], dtype=float32)]\n",
-      "4100 0.00133961 [array([[ 7.56782913, -8.16255951],\n",
-      "       [-8.02690887,  8.48179722]], dtype=float32), array([[ 14.13364124],\n",
-      "       [ 13.74823475]], dtype=float32)]\n",
-      "4200 0.00126037 [array([[ 7.60123825, -8.19679737],\n",
-      "       [-8.06023502,  8.51556683]], dtype=float32), array([[ 14.24943542],\n",
-      "       [ 13.86492538]], dtype=float32)]\n",
-      "4300 0.0011866 [array([[ 7.63405848, -8.2304287 ],\n",
-      "       [-8.09297848,  8.54874134]], dtype=float32), array([[ 14.36411953],\n",
-      "       [ 13.98048401]], dtype=float32)]\n",
-      "4400 0.00111781 [array([[ 7.66632032, -8.26348495],\n",
-      "       [-8.12516785,  8.58135414]], dtype=float32), array([[ 14.47776508],\n",
-      "       [ 14.09498692]], dtype=float32)]\n",
-      "4500 0.00105356 [array([[ 7.69805431, -8.29599953],\n",
-      "       [-8.15683651,  8.61343479]], dtype=float32), array([[ 14.59043407],\n",
-      "       [ 14.208498  ]], dtype=float32)]\n",
-      "4600 0.000993571 [array([[ 7.72928953, -8.32799721],\n",
-      "       [-8.18800831,  8.6450119 ]], dtype=float32), array([[ 14.70218945],\n",
-      "       [ 14.3210783 ]], dtype=float32)]\n",
-      "4700 0.000937398 [array([[ 7.76004934, -8.35950661],\n",
-      "       [-8.21870899,  8.67610645]], dtype=float32), array([[ 14.81308651],\n",
-      "       [ 14.43278503]], dtype=float32)]\n",
-      "4800 0.000884853 [array([[ 7.79035616, -8.39054871],\n",
-      "       [-8.24895859,  8.70674324]], dtype=float32), array([[ 14.92317486],\n",
-      "       [ 14.54366779]], dtype=float32)]\n",
-      "4900 0.000835607 [array([[ 7.82023335, -8.42115021],\n",
-      "       [-8.27878475,  8.73694897]], dtype=float32), array([[ 15.03250694],\n",
-      "       [ 14.65377808]], dtype=float32)]\n"
+      "       [ 13.26856995]], dtype=float32)]\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5000 0.000789405 [array([[ 7.84969997, -8.45132446],\n",
-      "       [-8.30820274,  8.76673508]], dtype=float32), array([[ 15.14112568],\n",
-      "       [ 14.76316071]], dtype=float32)]\n",
-      "5100 0.000746024 [array([[ 7.8787756 , -8.48109531],\n",
-      "       [-8.33723164,  8.79612732]], dtype=float32), array([[ 15.24907303],\n",
-      "       [ 14.87186241]], dtype=float32)]\n",
-      "5200 0.000705329 [array([[ 7.9074769 , -8.51048279],\n",
-      "       [-8.36588955,  8.82514381]], dtype=float32), array([[ 15.35638809],\n",
-      "       [ 14.97991657]], dtype=float32)]\n",
-      "5300 0.000667051 [array([[ 7.9358201 , -8.53950214],\n",
-      "       [-8.39419079,  8.85379791]], dtype=float32), array([[ 15.46310806],\n",
-      "       [ 15.08736515]], dtype=float32)]\n",
-      "5400 0.000631071 [array([[ 7.96382141, -8.56816483],\n",
-      "       [-8.42215824,  8.88210392]], dtype=float32), array([[ 15.56927395],\n",
-      "       [ 15.19424057]], dtype=float32)]\n",
-      "5500 0.000597195 [array([[ 7.99149418, -8.59649181],\n",
-      "       [-8.44979286,  8.91008186]], dtype=float32), array([[ 15.67490673],\n",
-      "       [ 15.30058002]], dtype=float32)]\n",
-      "5600 0.000565347 [array([[ 8.01884937, -8.62449074],\n",
-      "       [-8.47711849,  8.93773842]], dtype=float32), array([[ 15.78004646],\n",
-      "       [ 15.40641022]], dtype=float32)]\n",
-      "5700 0.00053529 [array([[ 8.04590416, -8.65218067],\n",
-      "       [-8.50414467,  8.96508884]], dtype=float32), array([[ 15.88471603],\n",
-      "       [ 15.51176357]], dtype=float32)]\n",
-      "5800 0.000506993 [array([[ 8.07267094, -8.67957115],\n",
-      "       [-8.53088188,  8.99214745]], dtype=float32), array([[ 15.98894882],\n",
-      "       [ 15.61666584]], dtype=float32)]\n",
-      "5900 0.000480276 [array([[ 8.09915638, -8.70667267],\n",
-      "       [-8.55734158,  9.01892185]], dtype=float32), array([[ 16.0927639 ],\n",
-      "       [ 15.72114086]], dtype=float32)]\n",
-      "6000 0.000455096 [array([[ 8.12537479, -8.73349476],\n",
-      "       [-8.58353519,  9.04543018]], dtype=float32), array([[ 16.19618034],\n",
-      "       [ 15.8252182 ]], dtype=float32)]\n",
-      "6100 0.000431318 [array([[ 8.15132999, -8.76004982],\n",
-      "       [-8.60947132,  9.07166576]], dtype=float32), array([[ 16.2992382 ],\n",
-      "       [ 15.92891407]], dtype=float32)]\n",
-      "6200 0.000408913 [array([[ 8.17703915, -8.7863493 ],\n",
-      "       [-8.63515568,  9.0976553 ]], dtype=float32), array([[ 16.40194511],\n",
-      "       [ 16.03223991]], dtype=float32)]\n",
-      "6300 0.000387685 [array([[ 8.2025032 , -8.8123951 ],\n",
-      "       [-8.66060638,  9.12339973]], dtype=float32), array([[ 16.5043087 ],\n",
-      "       [ 16.13524628]], dtype=float32)]\n",
-      "6400 0.000367665 [array([[ 8.22773457, -8.83820343],\n",
-      "       [-8.68581963,  9.1489048 ]], dtype=float32), array([[ 16.60636902],\n",
-      "       [ 16.23793793]], dtype=float32)]\n",
-      "6500 0.000348748 [array([[ 8.252738  , -8.86377335],\n",
-      "       [-8.71080971,  9.17418385]], dtype=float32), array([[ 16.70813179],\n",
-      "       [ 16.34031105]], dtype=float32)]\n",
-      "6600 0.000330831 [array([[ 8.27752972, -8.88912487],\n",
-      "       [-8.73558712,  9.19924545]], dtype=float32), array([[ 16.8096447 ],\n",
-      "       [ 16.44242477]], dtype=float32)]\n",
-      "6700 0.000313883 [array([[ 8.30210972, -8.9142561 ],\n",
-      "       [-8.76015568,  9.22408485]], dtype=float32), array([[ 16.91086769],\n",
-      "       [ 16.54424477]], dtype=float32)]\n",
-      "6800 0.000297859 [array([[ 8.32648468, -8.93917179],\n",
-      "       [-8.78451538,  9.24871826]], dtype=float32), array([[ 17.01185799],\n",
-      "       [ 16.6458168 ]], dtype=float32)]\n",
-      "6900 0.000282686 [array([[ 8.35065651, -8.9638834 ],\n",
-      "       [-8.80867863,  9.27315044]], dtype=float32), array([[ 17.11262131],\n",
-      "       [ 16.74715805]], dtype=float32)]\n",
-      "7000 0.000268332 [array([[ 8.37463665, -8.98839569],\n",
-      "       [-8.83265114,  9.2973938 ]], dtype=float32), array([[ 17.21317101],\n",
-      "       [ 16.84827423]], dtype=float32)]\n",
-      "7100 0.000254738 [array([[ 8.39842892, -9.01271629],\n",
-      "       [-8.85643959,  9.32144928]], dtype=float32), array([[ 17.31349373],\n",
-      "       [ 16.94919395]], dtype=float32)]\n",
-      "7200 0.000241846 [array([[ 8.42203522, -9.03684902],\n",
-      "       [-8.88004398,  9.34531689]], dtype=float32), array([[ 17.41362953],\n",
-      "       [ 17.04989433]], dtype=float32)]\n",
-      "7300 0.000229639 [array([[ 8.44546604, -9.06079865],\n",
-      "       [-8.90347099,  9.36900902]], dtype=float32), array([[ 17.5135746],\n",
-      "       [ 17.1504097]], dtype=float32)]\n",
-      "7400 0.000218102 [array([[ 8.46872425, -9.08457184],\n",
-      "       [-8.92672729,  9.39251804]], dtype=float32), array([[ 17.61334419],\n",
-      "       [ 17.25073624]], dtype=float32)]\n",
-      "7500 0.000207103 [array([[ 8.49181747, -9.10817146],\n",
-      "       [-8.94981956,  9.41586208]], dtype=float32), array([[ 17.71294975],\n",
-      "       [ 17.35089302]], dtype=float32)]\n",
-      "7600 0.00019673 [array([[ 8.5147562 , -9.13159466],\n",
-      "       [-8.97275066,  9.43903732]], dtype=float32), array([[ 17.81244278],\n",
-      "       [ 17.45088196]], dtype=float32)]\n",
-      "7700 0.000186893 [array([[ 8.53752899, -9.15485764],\n",
-      "       [-8.99551773,  9.46205521]], dtype=float32), array([[ 17.91179848],\n",
-      "       [ 17.55072975]], dtype=float32)]\n",
-      "7800 0.000177533 [array([[ 8.56014824, -9.17796516],\n",
-      "       [-9.01813984,  9.48490334]], dtype=float32), array([[ 18.01098061],\n",
-      "       [ 17.65044975]], dtype=float32)]\n",
-      "7900 0.000168681 [array([[ 8.58261013, -9.20090675],\n",
-      "       [-9.04060364,  9.50760651]], dtype=float32), array([[ 18.11004257],\n",
-      "       [ 17.75001335]], dtype=float32)]\n",
-      "8000 0.00016026 [array([[ 8.60492706, -9.22369862],\n",
-      "       [-9.06292439,  9.53015804]], dtype=float32), array([[ 18.20902443],\n",
-      "       [ 17.84943771]], dtype=float32)]\n",
-      "8100 0.000152331 [array([[ 8.62709713, -9.24634457],\n",
-      "       [-9.08510017,  9.55257416]], dtype=float32), array([[ 18.30782509],\n",
-      "       [ 17.94881058]], dtype=float32)]\n",
-      "8200 0.000144731 [array([[ 8.64912224, -9.26884079],\n",
-      "       [-9.10713863,  9.57484055]], dtype=float32), array([[ 18.40654945],\n",
-      "       [ 18.04801559]], dtype=float32)]\n",
-      "8300 0.000137547 [array([[ 8.67100906, -9.29119968],\n",
-      "       [-9.12903309,  9.59696579]], dtype=float32), array([[ 18.50515938],\n",
-      "       [ 18.14717674]], dtype=float32)]\n",
-      "8400 0.000130737 [array([[ 8.69276714, -9.31341362],\n",
-      "       [-9.15080452,  9.6189518 ]], dtype=float32), array([[ 18.60368919],\n",
-      "       [ 18.24616814]], dtype=float32)]\n",
-      "8500 0.000124269 [array([[ 8.71438313, -9.33549213],\n",
-      "       [-9.17242718,  9.64081097]], dtype=float32), array([[ 18.70210838],\n",
-      "       [ 18.34514046]], dtype=float32)]\n",
-      "8600 0.000118114 [array([[ 8.73587894, -9.35743999],\n",
-      "       [-9.19392967,  9.66252422]], dtype=float32), array([[ 18.80049515],\n",
-      "       [ 18.44394112]], dtype=float32)]\n",
-      "8700 0.000112287 [array([[ 8.75724602, -9.37924671],\n",
-      "       [-9.21531105,  9.68411732]], dtype=float32), array([[ 18.8987236 ],\n",
-      "       [ 18.54274178]], dtype=float32)]\n",
-      "8800 0.000106758 [array([[ 8.77848244, -9.40093231],\n",
-      "       [-9.2365551 ,  9.7055788 ]], dtype=float32), array([[ 18.99695206],\n",
-      "       [ 18.64137268]], dtype=float32)]\n",
-      "8900 0.000101482 [array([[ 8.7996006 , -9.42248917],\n",
-      "       [-9.2576828 ,  9.72691441]], dtype=float32), array([[ 19.09507942],\n",
-      "       [ 18.7399826 ]], dtype=float32)]\n",
-      "9000 9.64897e-05 [array([[ 8.82060337, -9.44391537],\n",
-      "       [-9.27869606,  9.74813175]], dtype=float32), array([[ 19.19311714],\n",
-      "       [ 18.83855438]], dtype=float32)]\n",
-      "9100 9.17507e-05 [array([[ 8.84147644, -9.46522522],\n",
-      "       [-9.29959106,  9.76923561]], dtype=float32), array([[ 19.29115486],\n",
-      "       [ 18.93697357]], dtype=float32)]\n",
-      "9200 8.72352e-05 [array([[ 8.86223602, -9.48641968],\n",
-      "       [-9.32036209,  9.79021645]], dtype=float32), array([[ 19.38911819],\n",
-      "       [ 19.03539276]], dtype=float32)]\n",
-      "9300 8.29284e-05 [array([[ 8.88288403, -9.50748825],\n",
-      "       [-9.34102249,  9.81107426]], dtype=float32), array([[ 19.48696518],\n",
-      "       [ 19.13381195]], dtype=float32)]\n",
-      "9400 7.88601e-05 [array([[ 8.90342617, -9.52843952],\n",
-      "       [-9.36157417,  9.8318243 ]], dtype=float32), array([[ 19.58481216],\n",
-      "       [ 19.23205185]], dtype=float32)]\n",
-      "9500 7.49855e-05 [array([[ 8.92385578, -9.54928017],\n",
-      "       [-9.38201809,  9.85246277]], dtype=float32), array([[ 19.68265915],\n",
-      "       [ 19.3302803 ]], dtype=float32)]\n",
-      "9600 7.13344e-05 [array([[ 8.94417572, -9.57001114],\n",
-      "       [-9.40235615,  9.87298965]], dtype=float32), array([[ 19.78043556],\n",
-      "       [ 19.42850876]], dtype=float32)]\n",
-      "9700 6.78175e-05 [array([[ 8.96438599, -9.59063339],\n",
-      "       [-9.42258739,  9.8934145 ]], dtype=float32), array([[ 19.87809181],\n",
-      "       [ 19.52672958]], dtype=float32)]\n",
-      "9800 6.45092e-05 [array([[ 8.98449039, -9.61114883],\n",
-      "       [-9.44271374,  9.91372871]], dtype=float32), array([[ 19.97574806],\n",
-      "       [ 19.6247921 ]], dtype=float32)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9900 6.13649e-05 [array([[ 9.00449181, -9.63154984],\n",
-      "       [-9.46273327,  9.93393517]], dtype=float32), array([[ 20.07340431],\n",
-      "       [ 19.72282982]], dtype=float32)]\n",
-      "10000 5.83398e-05 [array([[ 9.02439404, -9.65184593],\n",
-      "       [-9.48265266,  9.95403957]], dtype=float32), array([[ 20.17106056],\n",
-      "       [ 19.82086754]], dtype=float32)]\n",
-      "\n",
-      "Hypothesis:  [[  6.13103257e-05]\n",
-      " [  9.99936938e-01]\n",
-      " [  9.99950767e-01]\n",
-      " [  5.97514700e-05]] \n",
-      "Correct:  [[ 0.]\n",
-      " [ 1.]\n",
-      " [ 1.]\n",
-      " [ 0.]] \n",
-      "Accuracy:  1.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nHypothesis:  [[ 0.01338218]\\n [ 0.98166394]\\n [ 0.98809403]\\n [ 0.01135799]]\\nCorrect:  [[ 0.]\\n [ 1.]\\n [ 1.]\\n [ 0.]]\\nAccuracy:  1.0\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
