--- a/DeepLearningStudy/ex_lab-09-1-xor.ipynb
+++ b/DeepLearningStudy/ex_lab-09-1-xor.ipynb
@@ -6,12 +6,14 @@
     "collapsed": true
    },
    "source": [
-    "# [ Lab 9-1 : XOR ]\n"
+    "# [ Lab 9-1 : XOR ]\n",
+    "\n",
+    "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -96,12 +98,17 @@
    "metadata": {},
    "source": [
     "# Hypothesis using sigmoid: \n",
+    "> Sigmoid(logistic) function <br />\n",
+    "> \\begin{aligned}\n",
+    "\\sigma(x) = \\frac{1}{(1 + e^{-x})}\n",
+    "\\end{aligned}\n",
+    "<br/><br/>\n",
     "> tf.div(1., 1. + tf.exp(tf.matmul(X, W)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -166,225 +173,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.756388 [[-1.04186666]\n",
-      " [-0.62209123]]\n",
-      "100 0.706549 [[-0.55230838]\n",
-      " [-0.32715932]]\n",
-      "200 0.699196 [[-0.35595021]\n",
-      " [-0.23554619]]\n",
-      "300 0.695882 [[-0.23223408]\n",
-      " [-0.16788428]]\n",
-      "400 0.694386 [[-0.15237376]\n",
-      " [-0.11799105]]\n",
-      "500 0.693709 [[-0.10047413]\n",
-      " [-0.08210498]]\n",
-      "600 0.693402 [[-0.06653801]\n",
-      " [-0.05672474]]\n",
-      "700 0.693263 [[-0.04422457]\n",
-      " [-0.0389821 ]]\n",
-      "800 0.6932 [[-0.02948241]\n",
-      " [-0.02668179]]\n",
-      "900 0.693171 [[-0.01970287]\n",
-      " [-0.01820675]]\n",
-      "1000 0.693158 [[-0.01319357]\n",
-      " [-0.01239432]]\n",
-      "1100 0.693152 [[-0.00884896]\n",
-      " [-0.008422  ]]\n",
-      "1200 0.693149 [[-0.00594268]\n",
-      " [-0.00571459]]\n",
-      "1300 0.693148 [[-0.00399504]\n",
-      " [-0.0038732 ]]\n",
-      "1400 0.693148 [[-0.00268794]\n",
-      " [-0.00262285]]\n",
-      "1500 0.693147 [[-0.00180968]\n",
-      " [-0.0017749 ]]\n",
-      "1600 0.693147 [[-0.00121903]\n",
-      " [-0.00120046]]\n",
-      "1700 0.693147 [[-0.0008215 ]\n",
-      " [-0.00081158]]\n",
-      "1800 0.693147 [[-0.0005538]\n",
-      " [-0.0005485]]\n",
-      "1900 0.693147 [[-0.00037342]\n",
-      " [-0.00037059]]\n",
-      "2000 0.693147 [[-0.00025187]\n",
-      " [-0.00025036]]\n",
-      "2100 0.693147 [[-0.0001699 ]\n",
-      " [-0.00016909]]\n",
-      "2200 0.693147 [[-0.00011462]\n",
-      " [-0.00011419]]\n",
-      "2300 0.693147 [[ -7.73264110e-05]\n",
-      " [ -7.70967672e-05]]\n",
-      "2400 0.693147 [[ -5.21687834e-05]\n",
-      " [ -5.20464200e-05]]\n",
-      "2500 0.693147 [[ -3.51963608e-05]\n",
-      " [ -3.51291383e-05]]\n",
-      "2600 0.693147 [[ -2.37433123e-05]\n",
-      " [ -2.37088771e-05]]\n",
-      "2700 0.693147 [[ -1.60155705e-05]\n",
-      " [ -1.59990141e-05]]\n",
-      "2800 0.693147 [[ -1.08031436e-05]\n",
-      " [ -1.07925480e-05]]\n",
-      "2900 0.693147 [[ -7.28200621e-06]\n",
-      " [ -7.27588167e-06]]\n",
-      "3000 0.693147 [[ -4.90676302e-06]\n",
-      " [ -4.90510911e-06]]\n",
-      "3100 0.693147 [[ -3.31084902e-06]\n",
-      " [ -3.30919511e-06]]\n",
-      "3200 0.693147 [[ -2.23200232e-06]\n",
-      " [ -2.23183861e-06]]\n",
-      "3300 0.693147 [[ -1.48098138e-06]\n",
-      " [ -1.48081767e-06]]\n",
-      "3400 0.693147 [[ -1.02798163e-06]\n",
-      " [ -1.02781792e-06]]\n",
-      "3500 0.693147 [[ -6.82273878e-07]\n",
-      " [ -6.82110169e-07]]\n",
-      "3600 0.693147 [[ -4.45345393e-07]\n",
-      " [ -4.45181684e-07]]\n",
-      "3700 0.693147 [[ -2.68020898e-07]\n",
-      " [ -2.67857189e-07]]\n",
-      "3800 0.693147 [[ -2.03945660e-07]\n",
-      " [ -2.03781951e-07]]\n",
-      "3900 0.693147 [[ -1.54771641e-07]\n",
-      " [ -1.54607932e-07]]\n",
-      "4000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4100 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4200 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4300 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4400 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4500 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4600 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4700 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4800 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "4900 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5100 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5200 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5300 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5400 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5500 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5600 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5700 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5800 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "5900 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6100 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6200 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6300 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6400 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6500 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6600 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6700 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6800 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "6900 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7100 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7200 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7300 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7400 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7500 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7600 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7700 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7800 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "7900 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8100 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8200 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8300 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8400 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8500 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8600 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8700 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8800 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "8900 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9100 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9200 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9300 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9400 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9500 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9600 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9700 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9800 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "9900 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "10000 0.693147 [[ -1.23479083e-07]\n",
-      " [ -1.23315374e-07]]\n",
-      "\n",
-      "Hypothesis:  [[ 0.5]\n",
-      " [ 0.5]\n",
-      " [ 0.5]\n",
-      " [ 0.5]] \n",
-      "Correct:  [[ 0.]\n",
-      " [ 0.]\n",
-      " [ 0.]\n",
-      " [ 0.]] \n",
-      "Accuracy:  0.5\n"
+      "0 0.875979 [[ 0.78635675]\n",
+      " [ 0.66282606]]\n",
+      "100 0.695712 [[ 0.23303679]\n",
+      " [ 0.16537334]]\n",
+      "200 0.694273 [[ 0.14686324]\n",
+      " [ 0.11071212]]\n",
+      "300 0.693657 [[ 0.09652308]\n",
+      " [ 0.07720926]]\n",
+      "400 0.693379 [[ 0.06380107]\n",
+      " [ 0.05348304]]\n",
+      "500 0.693252 [[ 0.04234108]\n",
+      " [ 0.03682898]]\n",
+      "600 0.693195 [[ 0.02819196]\n",
+      " [ 0.02524729]]\n",
+      "700 0.693169 [[ 0.01882168]\n",
+      " [ 0.01724861]]\n",
+      "800 0.693157 [[ 0.01259336]\n",
+      " [ 0.01175302]]\n",
+      "900 0.693152 [[ 0.00844095]\n",
+      " [ 0.00799203]]\n",
+      "1000 0.693149 [[ 0.00566575]\n",
+      " [ 0.00542593]]\n",
+      "1100 0.693148 [[ 0.00380729]\n",
+      " [ 0.00367919]]\n",
+      "1200 0.693148 [[ 0.00256079]\n",
+      " [ 0.00249235]]\n",
+      "1300 0.693147 [[ 0.00172364]\n",
+      " [ 0.00168707]]\n",
+      "1400 0.693147 [[ 0.00116083]\n",
+      " [ 0.00114128]]\n",
+      "1500 0.693147 [[ 0.00078214]\n",
+      " [ 0.0007717 ]]\n",
+      "1600 0.693147 [[ 0.00052722]\n",
+      " [ 0.00052163]]\n",
+      "1700 0.693147 [[ 0.00035547]\n",
+      " [ 0.00035248]]\n",
+      "1800 0.693147 [[ 0.00023971]\n",
+      " [ 0.00023812]]\n",
+      "1900 0.693147 [[ 0.00016167]\n",
+      " [ 0.00016082]]\n",
+      "2000 0.693147 [[ 0.00010905]\n",
+      " [ 0.0001086 ]]\n",
+      "2100 0.693147 [[  7.35745998e-05]\n",
+      " [  7.33270717e-05]]\n",
+      "2200 0.693147 [[  4.96314133e-05]\n",
+      " [  4.95016211e-05]]\n",
+      "2300 0.693147 [[  3.34800388e-05]\n",
+      " [  3.34098659e-05]]\n",
+      "2400 0.693147 [[  2.25828153e-05]\n",
+      " [  2.25469157e-05]]\n",
+      "2500 0.693147 [[  1.52290941e-05]\n",
+      " [  1.52095818e-05]]\n",
+      "2600 0.693147 [[  1.02670037e-05]\n",
+      " [  1.02534523e-05]]\n",
+      "2700 0.693147 [[  6.93212905e-06]\n",
+      " [  6.92453659e-06]]\n",
+      "2800 0.693147 [[  4.66566371e-06]\n",
+      " [  4.66105121e-06]]\n",
+      "2900 0.693147 [[  3.12637053e-06]\n",
+      " [  3.12622865e-06]]\n",
+      "3000 0.693147 [[  2.11755855e-06]\n",
+      " [  2.11741667e-06]]\n",
+      "3100 0.693147 [[  1.42465376e-06]\n",
+      " [  1.42451188e-06]]\n",
+      "3200 0.693147 [[  9.56754661e-07]\n",
+      " [  9.56612780e-07]]\n",
+      "3300 0.693147 [[  6.28928547e-07]\n",
+      " [  6.28786665e-07]]\n",
+      "3400 0.693147 [[  4.20312062e-07]\n",
+      " [  4.20170153e-07]]\n",
+      "3500 0.693147 [[  2.71299882e-07]\n",
+      " [  2.71157973e-07]]\n",
+      "3600 0.693147 [[  1.64011112e-07]\n",
+      " [  1.63869203e-07]]\n",
+      "3700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "3800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "3900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n"
      ]
     }
    ],
