--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -21,13 +21,13 @@
     "### [References]\n",
     " \n",
     "><p>참고: <br/>\n",
-    "> 1.  *<a href=\"https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits\" title=\"Tensorflow Document\" target=\"blank\">Tensorflow Document</a>* <br/>\n",
+    "> 1.  <a href=\"https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits\" title=\"Tensorflow Document\" target=\"_blank\">Tensorflow Document</a> <br/>\n",
     "\n",
-    "> 2.  *<a href=\"https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83\" title=\"Neural Net Backprop in one slide! by Sung Kim\" target=\"blank\">Neural Net Backprop in one slide! by Sung Kim</a>* <br/>\n",
+    "> 2.  <a href=\"https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83\" title=\"Neural Net Backprop in one slide! by Sung Kim\" target=\"_blank\">Neural Net Backprop in one slide! by Sung Kim</a> <br/>\n",
     "  \n",
-    "> 3.  *<a href=\"http://blog.aloni.org/posts/backprop-with-tensorflow/\" title=\"Back Propagation with Tensorflow by Dan Aloni\" target=\"blank\">Back Propagation with Tensorflow by Dan Aloni</a>* <br/>\n",
+    "> 3.  <a href=\"http://blog.aloni.org/posts/backprop-with-tensorflow/\" title=\"Back Propagation with Tensorflow by Dan Aloni\" target=\"_blank\">Back Propagation with Tensorflow by Dan Aloni</a> <br/>\n",
     "\n",
-    "> 4.   *<a href=\"https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7\" title=\"Yes you should understand backprop by Andrej Karpathy\" target=\"blank\">Yes you should understand backprop by Andrej Karpathy</a> *\n",
+    "> 4.   <a href=\"https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7\" title=\"Yes you should understand backprop by Andrej Karpathy\" target=\"_blank\">Yes you should understand backprop by Andrej Karpathy</a>\n",
     "</p>\n",
     "\n",
     "### [Network Architecture]\n",
@@ -412,55 +412,55 @@
      "output_type": "stream",
      "text": [
       "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
-      "Step:    10\t Loss:  135.79248\t Acc: 83.17%\n",
-      "Step:    20\t Loss:   95.05665\t Acc: 88.12%\n",
+      "Step:    10\t Loss:  135.79250\t Acc: 83.17%\n",
+      "Step:    20\t Loss:   95.05664\t Acc: 88.12%\n",
       "Step:    30\t Loss:   77.29308\t Acc: 91.09%\n",
       "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
-      "Step:    50\t Loss:   58.81988\t Acc: 94.06%\n",
+      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
       "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
       "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
       "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
-      "Step:    90\t Loss:   41.86681\t Acc: 97.03%\n",
+      "Step:    90\t Loss:   41.86682\t Acc: 97.03%\n",
       "Step:   100\t Loss:   39.26264\t Acc: 97.03%\n",
       "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
       "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
       "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
-      "Step:   140\t Loss:   31.68491\t Acc: 97.03%\n",
+      "Step:   140\t Loss:   31.68490\t Acc: 97.03%\n",
       "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
       "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
-      "Step:   170\t Loss:   27.77062\t Acc: 97.03%\n",
+      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
       "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
-      "Step:   190\t Loss:   25.67165\t Acc: 97.03%\n",
+      "Step:   190\t Loss:   25.67166\t Acc: 97.03%\n",
       "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
-      "Step:   210\t Loss:   23.87505\t Acc: 98.02%\n",
+      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
       "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
       "Step:   230\t Loss:   22.32165\t Acc: 98.02%\n",
       "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
       "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
       "Step:   260\t Loss:   20.35483\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   19.77958\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   19.23885\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   19.77959\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   19.23886\t Acc: 100.00%\n",
       "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
       "Step:   300\t Loss:   18.24953\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   17.79591\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
       "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.95996\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   16.57391\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.95997\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
       "Step:   350\t Loss:   16.20697\t Acc: 100.00%\n",
       "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
       "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
       "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.90349\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
       "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
       "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
       "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
       "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
       "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   13.33001\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
       "Step:   460\t Loss:   13.10250\t Acc: 100.00%\n",
       "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
       "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.46836\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.46837\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
