--- a/DeepLearningStudy/ex_lab-09-3-xor-nn-wide-deep.ipynb
+++ b/DeepLearningStudy/ex_lab-09-3-xor-nn-wide-deep.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# [ Lab 9-3 : XOR-NN_Wide_Deep ]\n",
     "\n",
-    "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
+    "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"_blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
   },
   {
